seat reservation in progress

--- a/reserveSeats.html
+++ b/reserveSeats.html
@@ -95,21 +95,15 @@
 <div>
     <section>
 
-        <div id="info" class="seatInfoDiv">
-            <h1>Reserve Tickets</h1>
-            <h2 id="movieName">{Movie name}</h2>
-            <h2 id="theaterName">{Theater}</h2>
-            <div class="canvasBlock"></div>
-        </div>
+<!--        <div id="info" class="seatInfoDiv">-->
+<!--            <h1>Reserve Tickets</h1>-->
+<!--            <h2 id="movieName">{Movie name}</h2>-->
+<!--            <h2 id="theaterName">{Theater}</h2>-->
+<!--            <div class="canvasBlock"></div>-->
+<!--        </div>-->
 
         <div id="seatDiv" class="seatDiv">
 
-        </div>
-        <div class="selectedSeatInfoDiv">
-            <h1>Selected seats...</h1>
-            <h1>seat 1 {price}</h1>
-            <h1>seat 2 {price}</h1>
-            <h1>total price...</h1>
         </div>
         <input type="button" value="Next" onclick="addPhoneNumber()"/>
 
@@ -117,5 +111,86 @@
             </section>
 </div>
 
+<!--<div class="page-content">-->
+
+<!--    <div id="seatModal" class="seatModal">-->
+<!--        <div class="modal-content-seat">-->
+<!--&lt;!&ndash;            <span class="close" onclick="closePopup()">&times;</span>&ndash;&gt;-->
+<!--            &lt;!&ndash; <div class="seat-flexbox">-->
+<!--                <div class="seat-id">-->
+
+<!--                </div>-->
+<!--                <div class="seat-booking">-->
+<!--                    <button id="seatBooking">Reserve Seat</button>-->
+<!--                </div>-->
+<!--            </div> &ndash;&gt;-->
+<!--        </div>-->
+<!--    </div>-->
+
+<!--    <section>-->
+<!--        <div class="sideBar">-->
+<!--            <div class="sideBarContent">-->
+<!--                <h2>Tickets:</h2>-->
+<!--                &lt;!&ndash; <h2>Movie name</h2>-->
+<!--                <h2>Theater</h2>-->
+<!--                <h2>Time</h2>-->
+<!--                <h2>Seats</h2>-->
+<!--                <h2>Price</h2>-->
+<!--                <h2>Total</h2> &ndash;&gt;-->
+<!--                <div class="seat-flexbox">-->
+<!--                    <div class="seat-id">-->
+
+<!--                        &lt;!&ndash; For each &ndash;&gt;-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <input style="margin: 1vh;" id="bookButton" type="button" value="Book" onclick="openPopup()"/>-->
+<!--            </div>-->
+<!--        </div>-->
+
+<!--        <div class="section-generator">-->
+<!--            <div id="seatDiv" style="width: 70%; height: 70%;border-color: black;border-width: 5px;border-style: solid">-->
+<!--            </div>-->
+<!--        </div>-->
+
+
+<!--    </section>-->
+
+
+<!--</div>-->
+
+<!--<div id="myNextButton" class="modal">-->
+
+<!--    &lt;!&ndash; Modal content &ndash;&gt;-->
+<!--    <div class="modal-content">-->
+<!--        <span class="close">&times;</span>-->
+
+<!--        <div class="login-form">-->
+
+<!--            <h2>Please add your phone number</h2>-->
+
+<!--            <div>-->
+<!--                <form action="index.html" method="get">-->
+<!--                    <div>-->
+<!--                        <h3>Phone number</h3>-->
+<!--                        <input type="text" id="phoneNumber" required>-->
+<!--                        &lt;!&ndash;                    todo HOW DO WE TRANSFER THIS PHONE NUMBER DATA TO THE DATABASE ALONG WITH SEATS??&ndash;&gt;-->
+<!--                    </div>-->
+
+<!--                    &lt;!&ndash;                <div>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                    <h3>Password</h3>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                    <input type="password" required>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                </div>&ndash;&gt;-->
+
+<!--                    &lt;!&ndash;                <div> <a href="#">Forgot Password</a> <a href="#">Signup</a>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                </div>&ndash;&gt;-->
+
+<!--                    <div>-->
+<!--                        <input type="submit" value="Confirm reservation">-->
+<!--                    </div>-->
+<!--                </form>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 </body>
 </html>
