--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
     <!-- Scripts -->
     <!--<script src="https://kit.fontawesome.com/a076d05399.js" defer></script>-->
     <script src="https://kit.fontawesome.com/a076d05399.js" defer></script>
-    <script src="employeeLogin.js"defer></script>
-    <script src="src/main.js" defer></script>
+    <script src="src/employeeLogin.js"defer></script>
+    <script src="src/main.js" type="module" defer></script>
     <script src="src/movie_schedule/movie_schedule_script.js" type="module" defer></script>
 </head>
 
