--- a/reserveSeats.html
+++ b/reserveSeats.html
@@ -92,23 +92,37 @@
 
 </nav>
 
-<div>
+
+<div class="page-content">
     <section>
-
-        <div id="info" class="seatInfoDiv">
-            <h1>Reserve Tickets</h1>
-            <h2 id="movieName">{Movie name}</h2>
-            <h2 id="theaterName">{Theater}</h2>
-            <div class="canvasBlock"></div>
+        <div class="sideBar">
+            <div class="sideBarContent">
+                <h3 id="movieName">{Movie name}</h3>
+                <h3 id="theaterName">{Theater number}</h3>
+            </div>
+            <div class="sideBarContent">
+                <h2>Tickets:</h2>
+                <div class="seat-flexbox">
+                    <div class="seat-id"></div>
+                </div>
+                <input type="button" value="Reserve Tickets" onclick="addPhoneNumber()"/>
+            </div>
         </div>
 
-        <div id="seatDiv" class="seatDiv">
+        <!--        <div id="info" class="seatInfoDiv">-->
+        <!--            <h1>Reserve Tickets</h1>-->
+        <!--            <h2 id="movieName">{Movie name}</h2>-->
+        <!--            <h2 id="theaterName">{Theater number}</h2>-->
+        <!--            <div class="canvasBlock"></div>-->
+        <!--        </div>-->
 
+        <div class="section-generator">
+            <div id="seatDiv" class="seatDiv"></div>
         </div>
-        <input type="button" value="Next" onclick="addPhoneNumber()"/>
+
 
         <script src="seatSelection.js"></script>
-            </section>
+    </section>
 </div>
 
 </body>
