seat reservation is ALLLmost done missing: if customer doesn't exist. create new

--- a/reserveSeats.html
+++ b/reserveSeats.html
@@ -105,17 +105,9 @@
                 <div class="seat-flexbox">
                     <div class="seat-id"></div>
                 </div>
-                <input type="button" value="Reserve Tickets" onclick="addPhoneNumber()"/>
+                <input id="reserveTicketButton" type="button" value="Reserve Tickets" onclick="addPhoneNumber()"/>
             </div>
         </div>
-
-        <!--        <div id="info" class="seatInfoDiv">-->
-        <!--            <h1>Reserve Tickets</h1>-->
-        <!--            <h2 id="movieName">{Movie name}</h2>-->
-        <!--            <h2 id="theaterName">{Theater number}</h2>-->
-        <!--            <div class="canvasBlock"></div>-->
-        <!--        </div>-->
-
         <div class="section-generator">
             <div id="seatDiv" class="seatDiv"></div>
         </div>
