--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <script src="src/employeeLogin.js"defer></script>
     <script src="src/main.js" type="module" defer></script>
     <script src="src/movie_schedule/movie_schedule_script.js" type="module" defer></script>
+    <script type="module" src="src/repository/showing_repository.js" defer></script>
 </head>
 
 <body>
