--- a/public/html/operatorDashboard.html
+++ b/public/html/operatorDashboard.html
@@ -146,13 +146,33 @@
                             <p>This is your homepage, you can access movie operations on the left and view and edit the schedule below</p>
                         </div>
                         <div class="viewmovies">
-                            <h1>heyyy</h1>
                         </div>
                         <div class="addmovies">
-                            <h1>Add movies</h1>
-                        </div>
-                        <div class="deletemovies">
-                            <h1>Delete movies</h1>
+                            <form id="movieForm" method="post">
+                                <div>
+                                    <label class="addMovieIdLabel">Enter IMDB id: </label>
+                                    <input class="addMovieIdInput" type="text" name="movieId" placeholder="Enter here..." required>
+                                </div>
+
+                                <div>
+                                    <label class="addMovieLabel">Enter age restriction: </label>
+                                    <select class="addMovieInput" name="ageRestriction" required>
+                                        <option value="" disabled selected>Choose an age restriction</option>
+                                        <option value="0">General Audience (G)</option>
+                                        <option value="6">Suitable for 6 years and older (PG)</option>
+                                        <option value="12">Suitable for 12 years and older (PG-12)</option>
+                                        <option value="15">Suitable for 15 years and older (PG-15)</option>
+                                        <option value="18">Suitable for 18 years and older (R)</option>
+                                    </select>
+                                </div>
+                        
+                                <div>
+                                    <label class="addMovieLabel">Enter movie trailer link: </label>
+                                    <input class="addMovieInput" type="text" name="trailerLink" placeholder="Insert link here..." required>
+                                </div>
+                        
+                                <button class="addMovieSubmit" type="submit">Add Movie</button>
+                            </form>
                         </div>
                     </div>
                 </div>
