current movies uses movies from db

--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
                         <button id="modalBooking">Reserve Seats</button>
                     </div>-->
                     <div class="movie-trailer">
-                        <iframe id="modalTrailer" width="640" height="360" frameborder="0" allowfullscreen allow="autoplay"></iframe></iframe>
+                        <iframe id="modalTrailer" width="640" height="360" frameborder="0" allow="fullscreen"></iframe>
                     </div>
                 </div>
                 
