ændringer + saleItems HTML + CSS + JS

--- a/public/html/errorPage.html
+++ b/public/html/errorPage.html
@@ -33,7 +33,7 @@
 <div class="error-container">
   <h1>We apologize for the inconvenience, but it seems that an error has occurred during your interaction.</h1>
   <h2>Please reach out to the developers for assistance with this issue.</h2>
-  <img src="../images/000-http-error-codes.png" alt="Error Image">
+  <img src="../images/errorCode.png" alt="Error Image">
 </div>
 
 
