Movie Operator functions done, could be fancier

--- a/public/html/operatorDashboard.html
+++ b/public/html/operatorDashboard.html
@@ -147,7 +147,13 @@
                         <div class="addmovies">
                             <form id="movieForm" method="post">
                                 <div>
-                                    <label class="addMovieIdLabel">Enter IMDB id: </label>
+                                    <h1>
+                                        Add Movie
+                                    </h1>
+                                    <a style="text-decoration: none;" target="_blank" href="https://www.imdb.com/">Find the movie here and insert the link below</a>
+                                </div>
+                                <div>
+                                    <label class="addMovieIdLabel">Insert the IMDB link address: </label>
                                     <input class="addMovieIdInput" type="text" name="movieId" placeholder="Enter here..." required>
                                 </div>
 
@@ -164,11 +170,11 @@
                                 </div>
                         
                                 <div>
-                                    <label class="addMovieLabel">Enter movie trailer link: </label>
+                                    <label class="addMovieLabel">Insert movie trailer link from youtube: </label>
                                     <input class="addMovieInput" type="text" name="trailerLink" placeholder="Insert link here..." required>
                                 </div>
                         
-                                <button class="addMovieSubmit" type="submit">Add Movie</button>
+                                <button style="margin-top: 10px;" class="addMovieSubmit" type="submit">Add Movie</button>
                             </form>
                         </div>
                     </div>
