--- a/public/index.html
+++ b/public/index.html
@@ -164,19 +164,22 @@
 <!--              todo: When you input your phone number you should get a list of all
                         active reservations and a button on the side of each to cancel.
                         But where do I get this list from? Has it been made yet?-->
-                    <ul>
-<!--                        todo here it should show the tickets that the phone number has-->
-                        <li id="reservation-list-item-1">Reservation 1 -- <button>Cancel me</button></li>
-                        <li>Reservation 2 -- <button>Cancel me</button></li>
-                        <li>Reservation 3 -- <button>Cancel me</button></li>
-                    </ul>
-
-                    <!--                    <div> <a href="#">Forgot Password</a> <a href="#">Signup</a>-->
+                    <table>
+                        <thead>
+                        <tr>
+                            <th>Ticket ID: </th>
+                            <th>Showing ID: </th>
+                            <th>Seat ID: </th>
+                            <th>Cancel</th>
+                        </tr>
+                        </thead>
+                        <tbody id="ticketBody"></tbody>
+                    </table>
                 </div>
-
                 <div>
                     <input type="submit" value="Show reservations" onclick="showReservations()">
                 </div>
+            </div>
             </div>
         </div>
     </div>
@@ -276,9 +279,6 @@
             </div>
         </div>
     </section>
-
-
-
 
 </body>
 </html>
