new html, fixed div bug

--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,8 @@
                             <img src="https://fadzrinmadu.github.io/hosted-assets/responsive-mega-menu-and-dropdown-menu-using-only-html-and-css/img.jpg"
                                  alt="">
                         </div>
+                    </div>
+                </div>
 
 
             <li><a href="#">About</a></li>
