--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     <nav>
     <div class="wrapper">
         <div class="logo"><a href="#">Kino XP</a></div>
+        <div class="logo"><a href="#">Kino XP</a></div>
         <input type="checkbox" id="menu-btn">
         <input type="checkbox" id="close-btn">
         <ul class="nav-links">
@@ -67,6 +68,8 @@
                             <img src="https://fadzrinmadu.github.io/hosted-assets/responsive-mega-menu-and-dropdown-menu-using-only-html-and-css/img.jpg"
                                  alt="">
                         </div>
+                    </div>
+                </div>
 
 
             <li><a href="#">About</a></li>
