--- a/public/saleItem/cinemaStore.html
+++ b/public/saleItem/cinemaStore.html
@@ -10,9 +10,8 @@
 
 
 </head>
-<body>
 
-<img src="..">
+<body>
 <nav>
     <div class="wrapper">
         <div class="logo"><a href="#">Kino XP</a></div>
@@ -71,43 +70,37 @@
         <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
     </div>
 </nav>
-<h1>Welcome to Cinema Store</h1>
-
-<section>
-    <div class="flexbox-container" id="list2-container" style="margin-top: 12vh;">
-        <div class="flexbox-title">
-            <h1 style="color: #fff;">Drinks</h1>
-        </div>
-
-        <div class="flexbox-content">
-            <div class="flexbox-item flexbox-item-1">Item 1<span
-                    class="description"><h1>Description for item 1.</h1></span></div>
-            <div class="flexbox-item flexbox-item-2">Item 2</div>
-            <div class="flexbox-item flexbox-item-3">Item 3</div>
-            <div class="flexbox-item flexbox-item-4">Item 4</div>
-            <div class="flexbox-item flexbox-item-5">Item 5</div>
-            <div class="flexbox-item flexbox-item-6">Item 6</div>
-            <div class="flexbox-item flexbox-item-7">Item 7</div>
-            <div class="flexbox-item flexbox-item-8">Item 8</div>
-        </div>
 
 
-        <div class="flexbox-content">
-            <div class="flexbox-title">
-                <h1 style="color: #fff;">Snacks</h1>
-            </div>
-            <div class="flexbox-item flexbox-item-1">Item 1</div>
-            <div class="flexbox-item flexbox-item-2">Item 2</div>
-            <div class="flexbox-item flexbox-item-3">Item 3</div>
-            <div class="flexbox-item flexbox-item-4">Item 4</div>
-            <div class="flexbox-item flexbox-item-5">Item 5</div>
-            <div class="flexbox-item flexbox-item-6">Item 6</div>
-            <div class="flexbox-item flexbox-item-7">Item 7</div>
-            <div class="flexbox-item flexbox-item-8">Item 8</div>
-        </div>
+<header>
+    <h1>Welcome to the Cinema Store</h1>
+</header>
+
+<div class="flexbox-container"  style="margin-top: 12vh;">
+    <div class="flexbox-title">
+        <h1 style="color: #fff;">Drinks</h1>
     </div>
-</section>
+    <div class="flexbox-content" id="drinks-container">
+        <!-- Items will be added here dynamically using JavaScript -->
+    </div>
+</div>
 
+<div class="flexbox-container">
+    <div class="flexbox-title">
+        <h1 style="color: #fff;">Snacks</h1>
+    </div>
+    <div class= "flexbox-content" id="snacks-container">
+    <!-- Items will be added here dynamically using JavaScript -->
+</div>
+</div>
+
+<div id="store-bucket">
+    <h2>Store Bucket</h2>
+    <ul id="store-list">
+        <!-- Stored items will be added here dynamically using JavaScript -->
+    </ul>
+    <p>Total: $<span id="total">0.00</span></p>
+</div>
 
 </body>
 </html>
