Calendar gets showings from db

--- a/public/index.html
+++ b/public/index.html
@@ -153,6 +153,7 @@
             <p>On the right, you can see the schedule for our showings.</p>
         </div>
         <div class="calendar" id="movie-schedule">
+            <!-- forEach -->
         </div>
     </section>
 
