jubiii, modals works once again

--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,12 @@
     <script src="src/main.js" type="module" defer></script>
     <script src="src/movie_schedule/movie_schedule_script.js" type="module" defer></script>
     <script type="module" src="src/repository/showing_repository.js" defer></script>
+    <script src="src/modalPopUp.js" defer></script>
 </head>
 
 <body>
     <nav>
     <div class="wrapper">
-        <div class="logo"><a href="#">Kino XP</a></div>
         <div class="logo"><a href="#">Kino XP</a></div>
         <input type="checkbox" id="menu-btn">
         <input type="checkbox" id="close-btn">
@@ -75,9 +75,10 @@
             <li><a href="#">About</a></li>
 
                 <!-- Account -->
-                <li>
-                    <a id="login-link" href="#">Login</a>
-                </li>
+            <li>
+                <a id="login-link" href="#">Login</a>
+            </li>
+
             </ul>
             <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
         </div>
