JAVASCSRIPT cancel reservation: Works now, working on styling now

--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,8 @@
                             <img src="https://fadzrinmadu.github.io/hosted-assets/responsive-mega-menu-and-dropdown-menu-using-only-html-and-css/img.jpg"
                                  alt="">
                         </div>
+                    </div>
+                </div>
 
 
             <li><a href="#">About</a></li>
@@ -103,14 +105,6 @@
         </div>
     </div>
 
-
-                <div>
-                    <input type="submit" value="Login" id="login-btn">
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- modals -->
     <!--                    FIXME -edit works now-->
     <!-- Modal content -->
@@ -125,10 +119,6 @@
                         <h3>Input Number to see reservations</h3>
                         <input type="text" required id="customerPhoneNumber">
                     </div>
-
-<!--              todo: When you input your phone number you should get a list of all
-                        active reservations and a button on the side of each to cancel.
-                        But where do I get this list from? Has it been made yet?-->
                     <table>
                         <thead>
                         <tr>
@@ -142,7 +132,8 @@
                     </table>
                 </div>
                 <div>
-                    <input type="submit" value="Show reservations" onclick="showReservations()">
+<!--                    <input type="submit" value="Show reservations" onclick="showReservations()">-->
+                    <input class="btn-style" type="submit" value="Show reservations" onclick="showReservations()">
                 </div>
             </div>
             </div>
