--- a/public/saleItem/cinemaStore.html
+++ b/public/saleItem/cinemaStore.html
@@ -21,8 +21,6 @@
             <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
 
             <!-- <li><a href="#">Home</a></li> -->
-
-
             <li><a href="html/about.html">Krav</a></li>
 
             <li>
@@ -37,6 +35,7 @@
                 </ul>
             </li>
 
+            <!-- This was missing -->
             <li><a href="">Movie Operations</a>
                 <input type="checkbox">
                 <label for="showDrop" class="mobile-item">Dropdown Menu</label>
@@ -53,19 +52,19 @@
                 <label for="showMega" class="mobile-item">Mega Menu</label>
                 <div class="mega-box">
                     <div class="content">
-
                         <div class="row">
                             <img src="https://fadzrinmadu.github.io/hosted-assets/responsive-mega-menu-and-dropdown-menu-using-only-html-and-css/img.jpg"
                                  alt="">
                         </div>
-
-
                         <li><a href="#">About</a></li>
 
                         <!-- Account -->
                         <li>
                             <a id="login-link" href="#">Login</a>
                         </li>
+                    </div>
+                </div>
+            </li>
         </ul>
         <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
     </div>
