JAVASCSRIPT cancel reservation: Works now, working on styling now pt2

--- a/public/index.html
+++ b/public/index.html
@@ -111,9 +111,8 @@
     <!--                    FIXME -edit works now-->
     <!-- Modal content -->
     <div id="myCancelModal" class="myCancelModal">
-        <div class="modal-content">
+        <div class="cancel-modal-content">
             <span class="cancelClose">x</span>
-
             <div class="cancel-form">
                 <h2>Cancel reservation</h2>
                 <div>
@@ -124,9 +123,9 @@
                     <table>
                         <thead>
                         <tr>
-                            <th>Ticket ID: </th>
-                            <th>Showing ID: </th>
-                            <th>Seat ID: </th>
+                            <th>Ticket ID-</th>
+                            <th>Showing ID-</th>
+                            <th>Seat ID-</th>
                             <th>Cancel</th>
                         </tr>
                         </thead>
