book seats button redirects to reserveSeats.html

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,13 @@
     <script src="src/movie_schedule/movie_schedule_script.js" type="module" defer></script>
     <script type="module" src="src/repository/showing_repository.js" defer></script>
     <script src="src/modalPopUp.js" defer></script>
+    <script defer>
+        function redirectToTargetPage(id) {
+            {
+                window.location.href = "target.html?id=" + id;
+            }
+        }
+    </script>
 </head>
 
 <body>
