JAVASCSRIPT cancel reservation: Works now, working on styling now pt done

--- a/public/index.html
+++ b/public/index.html
@@ -36,15 +36,11 @@
             <li><a href="html/about.html">Krav</a></li>
 
             <li>
-                <a href="#" class="desktop-item">SletMigGerne</a>
-                <input type="checkbox" id="showDrop">
-                <label for="showDrop" class="mobile-item">Dropdown Menu</label>
-                <ul class="drop-menu">
-                    <li><a id="cancel-reservation" href="#">Cancel reservation</a></li>
-                    <li><a href="#">Option</a></li>
-                    <li><a href="#">Option</a></li>
-                    <li><a href="#">Option</a></li>
-                </ul>
+<!--                <a href="#" class="desktop-item">Reservations</a>-->
+            <a id="cancel-reservation" href="#">View reservation</a>
+
+            <input type="checkbox" id="showDrop">
+
             </li>
 
             <li><a href="">Movie Operations</a>
@@ -114,7 +110,7 @@
         <div class="cancel-modal-content">
             <span class="cancelClose">x</span>
             <div class="cancel-form">
-                <h2>Cancel reservation</h2>
+                <h2>View reservation</h2>
                 <div>
                     <div>
                         <h3>Input Number to see reservations</h3>
