Movie Operator very fancy

--- a/public/html/operatorDashboard.html
+++ b/public/html/operatorDashboard.html
@@ -142,8 +142,10 @@
                             <h1>Welcome operator</h1>
                             <p>This is your homepage, you can access movie operations on the left and view and edit the schedule below</p>
                         </div>
+                        <div class="loading-message" style="display: none;"><h1>Loading...</h1></div>
                         <div class="viewmovies">
                         </div>
+
                         <div class="addmovies">
                             <form id="movieForm" method="post">
                                 <div>
