MO -  more fancy

--- a/public/html/operatorDashboard.html
+++ b/public/html/operatorDashboard.html
@@ -152,7 +152,7 @@
                                     <h1>
                                         Add Movie
                                     </h1>
-                                    <a style="text-decoration: none;" target="_blank" href="https://www.imdb.com/">Find the movie here and insert the link below</a>
+                                    <a style="text-decoration: none;color: #fff;font-weight: 400;background-color: #222;padding: 5px;border-radius: 10px;" target="_blank" href="https://www.imdb.com/">Find the movie here and insert the link below</a>
                                 </div>
                                 <div>
                                     <label class="addMovieIdLabel">Insert the IMDB link address: </label>
