--- a/public/html/operatorDashboard.html
+++ b/public/html/operatorDashboard.html
@@ -131,7 +131,7 @@
                                 <a>View movies in the database</a>
                             </button>
                             <button>
-                                <a">Add movie to the database</a>
+                                <a>Add movie to the database</a>
                             </button>
                         </div>
                     </div>
@@ -181,6 +181,16 @@
                         </div>
                     </div>
                 </div>
+        </section>
+
+        <section>
+            <div class="flexbox-container" id="list2-container">
+                <div class="flexbox-title">
+                    <h1 style="color: #fff;">Schedule</h1>
+                </div>
+                <div class="flexbox-content">
+                </div>
+            </div>
         </section>
 
 
