--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,6 @@
 
             <!-- <li><a href="#">Home</a></li> -->
 
-
-            <li><a href="html/about.html">Krav</a></li>
-
             <li>
 <!--                <a href="#" class="desktop-item">Reservations</a>-->
             <a id="cancel-reservation" href="#">View reservation</a>
@@ -43,29 +40,14 @@
 
             </li>
 
-            <li><a href="">Movie Operations</a>
+            <!-- <li><a href="">Movie Operations</a>
                 <input type="checkbox">
                 <label for="showDrop" class="mobile-item">Dropdown Menu</label>
                 <ul class="drop-menu">
                     <li><a href="html/addMovie.html">Add New Movie</a></li>
                     <li><a href="html/editMovie.html">Edit Movie</a></li>
                 </ul>
-            </li>
-
-            <!-- Mega Menu -->
-            <li>
-                <a href="#" class="desktop-item">Mega Menu</a>
-                <input type="checkbox" id="showMega">
-                <label for="showMega" class="mobile-item">Mega Menu</label>
-                <div class="mega-box">
-                    <div class="content">
-
-                        <div class="row">
-                            <img src="https://fadzrinmadu.github.io/hosted-assets/responsive-mega-menu-and-dropdown-menu-using-only-html-and-css/img.jpg"
-                                 alt="">
-                        </div>
-                    </div>
-                </div>
+            </li> -->
 
 
             <li><a href="#">About</a></li>
