--- a/public/html/cinemaStore.html
+++ b/public/html/cinemaStore.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Cinema Store</title>
-    <link rel="stylesheet" href="cinemaStore.css">
-    <script src="cinemaStore.js" defer></script>
+    <link rel="stylesheet" href="../styles/cinemaStore.css">
+    <script src="../src/cinemaStore.js" defer></script>
 
 </head>
-
 <body>
-
 <header>
     <h1>Welcome to the Cinema Store</h1>
 </header>
+
 <div class="flexbox-container" style="margin-top: 12vh;">
     <div class="flexbox-title">
         <h1 style="color: #fff;">Sale Items</h1>
@@ -21,7 +20,6 @@
         <!-- Sale items will be added here dynamically using JavaScript -->
     </div>
 </div>
-
 <div id="store-bucket">
     <h2>Store Bucket</h2>
     <ul id="store-list">
