MO can see schedule

--- a/public/html/operatorDashboard.html
+++ b/public/html/operatorDashboard.html
@@ -6,16 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kino XP</title>
     <link rel="stylesheet" href="../styles/dashboard.css">
-    
-    <link rel="stylesheet" href="styles/popular_movies.css">
+    <link rel="stylesheet" href="../styles/popular_movies.css">
     <link rel="stylesheet" href="../styles/movie_schedule_styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap">
     
-    <script src="../src/dashboardJS/dashboard.js"></script>
+    <script src="../src/dashboardJS/dashboard.js" defer type="module"></script>
     <!-- Movie Schedule -->
-    <script src="src/main.js" type="module" defer></script>
-    <script src="src/movie_schedule/movie_schedule_script.js" type="module" defer></script>
-    <script type="module" src="src/repository/showing_repository.js" defer></script>
 </head>
 
 <body>
