cinemaStore done part 2

--- a/public/html/cinemaStore.html
+++ b/public/html/cinemaStore.html
@@ -26,6 +26,7 @@
         <!-- Stored items will be added here dynamically using JavaScript -->
     </ul>
     <p>Total: $<span id="total">0.00</span></p>
+    <button id="purchase-button">Purchase</button>
 </div>
 
 </body>
