--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,6 @@
     </div>
 
     <!-- modals -->
-    <!--                    FIXME -edit works now-->
     <!-- Modal content -->
     <div id="myCancelModal" class="myCancelModal">
         <div class="cancel-modal-content">
@@ -188,16 +187,6 @@
                 <div class="flexbox-item flexbox-item-7">Item 7</div>
                 <div class="flexbox-item flexbox-item-8">Item 8</div>
             </div>
-            <div class="flexbox-content">
-                <div class="flexbox-item flexbox-item-1">Item 1<span class="description"><h1>Description for item 1.</h1></span></div>
-                <div class="flexbox-item flexbox-item-2">Item 2</div>
-                <div class="flexbox-item flexbox-item-3">Item 3</div>   
-                <div class="flexbox-item flexbox-item-4">Item 4</div>   
-                <div class="flexbox-item flexbox-item-5">Item 5</div>
-                <div class="flexbox-item flexbox-item-6">Item 6</div>
-                <div class="flexbox-item flexbox-item-7">Item 7</div>
-                <div class="flexbox-item flexbox-item-8">Item 8</div>
-            </div>
 
             <div class="flexbox-content">
                 <div class="flexbox-title">
@@ -212,6 +201,38 @@
                 <div class="flexbox-item flexbox-item-7">Item 7</div>
                 <div class="flexbox-item flexbox-item-8">Item 8</div>
             </div>
+        </div>
+    </section>
+
+    <section style="block-size: 40%;">
+        <div class="footer">
+            <div class="footer-content">
+                <div class="footer-section about" style="max-width: 80vh;">
+                    <h1 class="logo-text">Kino XP</h1>
+                    <p>
+                        Discover the magic of cinema in the heart of Copenhagen at Kino XP. Our theater is not just a venue; it's an experience waiting to unfold. With a diverse selection of movies catering to all ages, we bring stories to life on the big screen. Join us for an immersive cinematic journey where entertainment knows no bounds. Experience the joy of movies like never before, exclusively at Kino XP!
+                    </p>
+                </div>
+                <div class="contact">
+                    <h3>Contact us here:</h3>
+                    <p>+45 36 23 88 12</p>
+                    <p>support@kinoxp.com</p>
+                </div>
+                <div class="opening-times">
+                    <h3>Opening Times</h3>
+                    <p>Monday: 10-24</p>
+                    <p>Tuesday: 10-24</p>
+                    <p>Wednesday: 10-24</p>
+                    <p>Thursday: 10-24</p>
+                    <p>Friday: 10-24</p>
+                    <p>Saturday: 10-24</p>
+                    <p>Sunday: 10-24</p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                &copy; 2023 Copyright | Kino XP
+            </div>
+
         </div>
     </section>
 </body>
