--- a/public/html/reserveSeats.html
+++ b/public/html/reserveSeats.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-<nav style="position: unset">
+<nav style="position: fixed">
     <div class="wrapper">
         <div class="logo"><a href="/public/index.html">Kino XP</a></div>
         <input type="checkbox" id="menu-btn">
@@ -94,7 +94,7 @@
 
 <div class="page-content-reserveSeats">
     <section style="flex-direction: row">
-        <div class="sideBar"style="margin-top: 40vh">
+        <div class="sideBar"style="margin-top: 60vh">
             <div class="sideBarContent">
                 <h3 id="movieName">{Movie name}</h3>
                 <h3 id="theaterName">{Theater number}</h3>
